# calibre-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  server.py
.claude/: cross-family-status.json  pipeline.yml  settings.json
docs/plans/: 001-phase1-basic-tools.md  002-library-management.md
src/calibre_mcp/: server.py
