[project]
name = "calibre-mcp"
version = "0.1.0"
description = "MCP server for Calibre book library management"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
]

[project.scripts]
calibre-mcp = "calibre_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
